@@ -54,6 +54,7 @@ let flat_float_array = true
 let function_sections = false
 let afl_instrument = false
 let bytecode_runtime_id = ""
+let zinc_runtime_id = ""
 let native_runtime_id = ""
 let native_compiler = false
 let tsan = false
